# mirror-server

./: Cargo.toml  Dockerfile  README.md
example/: README.md  docker-compose.yml
example/nginx/: Dockerfile  main.conf
example/tests/: Dockerfile  requirements.txt  wait-upstream.sh
example/tests/src/: test_main.py
self-signed-certs/: cert.pem  key.pem
src/: main.rs
