[package]
name = "mirror_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["macros"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
